# new-Yamaha-Style-Studio

./: pyproject.toml
config/: default.yaml
presets/: dangdut.yaml  pop.yaml  rock.yaml
scripts/: benchmark.py  download_models.py  setup_dev.sh
src/: __init__.py  config.py
src/core/: __init__.py
src/core/analysis/: __init__.py  tempo_detect.py
src/core/audio/: __init__.py  audio_loader.py
src/core/pipeline/: __init__.py  orchestrator.py
src/exceptions/: __init__.py  audio_errors.py  pipeline_errors.py  validation_errors.py
src/security/: __init__.py  file_validator.py  input_validator.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/core/: test_audio.py
