[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yamaha-style-studio"
version = "0.1.0"
description = "Convert MP3 to Yamaha keyboard styles and MIDI files using AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ksleky-ship-it"}]
keywords = ["audio", "yamaha", "midi", "music", "ai", "transcription"]

dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "onnxruntime>=1.15.0",
    "basic-pitch>=0.2.4",
    "demucs>=4.0.0",
    "music21>=9.1.0",
    "mido>=1.2.10",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]